--- a/templates/main/components/generate.html
+++ b/templates/main/components/generate.html
@@ -1,35 +1,38 @@
-<div class="row mt-5">
+<form action="{{ url_for("prompt") }}" method="POST">
+     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+    <div class="row mt-5">
 
-    <div class="col-5">
-        <div class="mb-2 row align-items-center">
-            <div class="col-3 fw-bold">
-                I want lesson plan based on:
+        <div class="col-5">
+            <div class="mb-2 row align-items-center">
+                <div class="col-3 fw-bold">
+                    I want lesson plan based on:
+                </div>
+                <div class="col-auto">
+                    <input class="form-control" placeholder="Page 1, 2 ,3"/>
+                </div>
+                <div class="btn btn-secondary col-1">All</div>
             </div>
-            <div class="col-auto">
-                <input class="form-control" placeholder="Page 1, 2 ,3"/>
+
+            <div class="row align-items-center">
+                <div class="col-3 fw-bold">
+                    I want:
+                </div>
+                <div class="col-auto">
+                    <select class="form-select" aria-label="Select prompt output type">
+                        <option value="1" selected>Questions & Answers</option>
+                        <option value="2">Lesson Plan</option>
+                    </select>
+                </div>
             </div>
+
         </div>
 
-        <div class="row align-items-center">
-            <div class="col-3 fw-bold">
-                I want:
-            </div>
-            <div class="col-auto">
-                <select class="form-select" aria-label="Default select example">
-                    <option selected>Open this select menu</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-                </select>
-            </div>
+        <div class="col-auto d-flex">
+            <button class="btn btn-primary">Generate</button>
         </div>
-
     </div>
+</form>
 
-    <div class="col-auto d-flex">
-        <button class="btn btn-primary">Generate</button>
-    </div>
-</div>
 
 <div class="bg-body-secondary mt-5 rounded p-2 vh-100">
 
